--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
 
+sudo: true
+
 jdk:
 - oraclejdk8
 
@@ -7,4 +9,4 @@ script:
 - ./gradlew check
 
 after_success:
-  - bash <(curl -s https://s3-ap-southeast-1.amazonaws.com/ci-scripts/ff-start-travis.sh)
+  - bash <(curl -s https://scripts.scantist.com/staging/ci-travis.sh)
