--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ script:
 - ./gradlew check
 
 after_success:
-  - bash <(curl -s https://scripts.scantist.com/staging/ci-travis.sh)
+  - bash travis.sh
